--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	implementation 'org.springframework:spring-web:5.3.30'
 
 	// Servlet
-	providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
+	providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
 //	providedCompile 'jakarta.servlet:jakarta.servlet-api:5.0.0'
 //	providedCompile 'jakarta.servlet:jakarta.servlet-api:5.0.0'
 
@@ -42,8 +42,11 @@ dependencies {
 	implementation 'org.thymeleaf:thymeleaf-spring5:3.1.2.RELEASE'
 
 	// Swagger
-//	implementation 'io.springfox:springfox-boot-starter:3.0.0'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+//	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+
+	// Logging
+	implementation 'org.slf4j:slf4j-api:1.7.36'
+	implementation 'ch.qos.logback:logback-classic:1.2.13'
 
 	// Test
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
