--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,8 @@ dependencies {
 	// View
 	implementation 'org.thymeleaf:thymeleaf-spring5:3.1.2.RELEASE'
 
-	// Swagger
+	// Swagger springfox (Spring MVC 완벽 호환)
 //	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
-// springfox (Spring MVC 완벽 호환)
 //	implementation 'io.springfox:springfox-swagger2:3.0.0'
 //	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
